update personal details

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -49,7 +49,7 @@
         <div class="avatar"></div>
         <h2><a href="{{ site.baseurl }}" itemprop="url"><span itemprop="name"><strong itemprop="givenName">Attila</strong> <span itemprop="familyName">Ol&aacute;h</span></span></a></h2>
         <h3 class="condensed thin"><strong>Full-time dad</strong>, part-time web developer.</h3>
-        <h3 class="condensed thin wide" itemprop="affiliation">Technical Interviewer at oDesk.</h3>
+        <h3 class="condensed thin wide" itemprop="affiliation"><a href="//youtube.be/FyQi79aYfxU">Nerdfighter</a> and <a href="//blog.golang.org/gopher">gopher</a> at <a href="//stor.es">stor.es</a>.</h3>
         <link itemprop="nationality" href="https://en.wikipedia.org/wiki/Serbia">
         <link itemprop="nationality" href="https://en.wikipedia.org/wiki/Hungary">
       </div>
@@ -69,7 +69,7 @@
       <link itemprop="addressCountry" href="https://en.wikipedia.org/wiki/Serbia">
       <meta itemprop="email" content="attila@attilaolah.eu">
       <meta itemprop="telephone" content="+381612539794">
-      <meta itemprop="streetAddress" content="74, Jugoslovenske Narodne Armije">
+      <meta itemprop="streetAddress" content="74, JNA">
       <meta itemprop="postalCode" content="24210">
     </dir>
   {% endif %}
