Update status line.
Should point to Google Zürich, not stor.es.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -48,8 +48,8 @@
       <div class="content" itemprop="author" itemscope itemtype="http://data-vocabulary.org/Person">
         <div class="avatar"></div>
         <h2><a href="{{ site.baseurl }}" itemprop="url"><span itemprop="name"><strong itemprop="givenName">Attila</strong> <span itemprop="familyName">Ol&aacute;h</span></span></a></h2>
-        <h3 class="condensed thin"><strong>Full-time dad</strong>, part-time web developer.</h3>
-        <h3 class="condensed thin wide" itemprop="affiliation"><a href="//youtu.be/FyQi79aYfxU">Nerdfighter</a> and <a href="//blog.golang.org/gopher">gopher</a> at <a href="//stor.es">stor.es</a>.</h3>
+        <h3 class="condensed thin"><strong>Site Reliability Engineer</strong> @ <a href="//careers.google.com/locations/zurich">Google Zürich</a>.</h3>
+        <h3 class="condensed thin wide" itemprop="affiliation"><a href="//youtu.be/FyQi79aYfxU">Nerdfighter</a>, traveller, <a href="//blog.golang.org/gopher">gopher</a>, dad.</h3>
         <link itemprop="nationality" href="https://en.wikipedia.org/wiki/Serbia">
         <link itemprop="nationality" href="https://en.wikipedia.org/wiki/Hungary">
       </div>
