--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -61,13 +61,13 @@
   <footer>
     <a href="https://plus.google.com/112887311846435666179?rel=author" rel="publisher">Attila Oláh</a>
     <span class="wide">||</span><br class="narrow">
-    <a href="mailto:attila@attilaolah.eu" rel="me">attila@attilaolah.eu</a>
+    <a href="mailto:attilaolah@gmail.com" rel="me">attilaolah@gmail.com</a>
   </footer>
   {% if page.url == "/" %}
     <div class="meta" itemprop="address" itemscope itemtype="http://data-vocabulary.org/PostalAddress">
       <link itemprop="addressLocality" href="https://en.wikipedia.org/wiki/Bajmok">
       <link itemprop="addressCountry" href="https://en.wikipedia.org/wiki/Serbia">
-      <meta itemprop="email" content="attila@attilaolah.eu">
+      <meta itemprop="email" content="attilaolah@gmail.com">
       <meta itemprop="telephone" content="+381612539794">
       <meta itemprop="streetAddress" content="74, JNA">
       <meta itemprop="postalCode" content="24210">
