Fix video embeds.

--- a/src/less/video.less
+++ b/src/less/video.less
@@ -15,7 +15,11 @@ article {
     padding-bottom: 61%;
     height: 0;
     > iframe {
-      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
     }
   }
   .player-ted > iframe {
