--- a/_layouts/sitemap.html
+++ b/_layouts/sitemap.html
@@ -5,18 +5,18 @@
   xsi:schemaLocation="http://www.sitemaps.org/schemas/sitemap/0.9
     http://www.sitemaps.org/schemas/sitemap/0.9/sitemap.xsd">
   <url>
-    <loc>http://attilaolah.eu/</loc>
+    <loc>https://attilaolah.eu/</loc>
     <lastmod>{{ site.date | date: "%Y-%m-%d" }}</lastmod>
     <changefreq>daily</changefreq>
   </url>
   <url>
-    <loc>http://attilaolah.eu/archive/</loc>
+    <loc>https://attilaolah.eu/archive/</loc>
     <lastmod>{{ site.date | date: "%Y-%m-%d" }}</lastmod>
     <changefreq>daily</changefreq>
   </url>
 {% for post in site.posts %}
   <url>
-    <loc>http://attilaolah.eu{{ post.url }}</loc>
+    <loc>https://attilaolah.eu{{ post.url }}</loc>
     <lastmod>{{ post.date | date: "%Y-%m-%d" }}</lastmod>
     <changefreq>monthly</changefreq>
   </url>
