--- a/_src/css/main.less
+++ b/_src/css/main.less
@@ -33,7 +33,7 @@ body{font:13px/1.231 arial,helvetica,clean,sans-serif;*font-size:small;*font:x-s
 
 /*
  * The rest of the code is placed under the Public Domain.
- * Written by Attila Olah, http://aatiis.me/ <attilaolah@gmail.com>
+ * Written by Attila Olah, https://attilaolah.eu <attilaolah@gmail.com>
  */
 
 /* Common Styles */
