--- a/_layouts/atom.html
+++ b/_layouts/atom.html
@@ -1,24 +1,24 @@
 <?xml version="1.0"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
   <title>Attila Oláh</title>
-  <link href="http://attilaolah.eu/"/>
-  <link type="application/atom+xml" rel="self" href="http://attilaolah.eu/atom.xml"/>
+  <link href="https://attilaolah.eu/"/>
+  <link type="application/atom+xml" rel="self" href="https://attilaolah.eu/atom.xml"/>
   <updated>{{ site.time | date_to_xmlschema }}</updated>
-  <id>http://attilaolah.eu/</id>
+  <id>https://attilaolah.eu/</id>
   <author>
     <name>Attila Oláh</name>
     <email>attilaolah@gmail.com</email>
   </author>
   {% for post in site.posts %}
   <entry>
-    <id>http://attilaolah.eu{{ post.id }}</id>
-    <link type="text/html" rel="alternate" href="http://attilaolah.eu{{ post.url }}"/>
+    <id>https://attilaolah.eu{{ post.id }}</id>
+    <link type="text/html" rel="alternate" href="https://attilaolah.eu{{ post.url }}"/>
     <title>{{ post.title }}</title>
     <published>{{ post.date | date_to_xmlschema }}</published>
     <updated>{{ post.date | date_to_xmlschema }}</updated>
     <author>
       <name>Attila Oláh</name>
-      <uri>http://attilaolah.eu/</uri>
+      <uri>https://attilaolah.eu/</uri>
     </author>
     <content type="html">{{ post.content | xml_escape }}</content>
   </entry>
