--- a/_src/css/main.css
+++ b/_src/css/main.css
@@ -188,7 +188,7 @@ tt {
 }
 /*
  * The rest of the code is placed under the Public Domain.
- * Written by Attila Olah, http://aatiis.me/ <attilaolah@gmail.com>
+ * Written by Attila Olah, https://attilaolah.eu <attilaolah@gmail.com>
  */
 /* Common Styles */
 html, body {
