--- a/_layouts/atom.html
+++ b/_layouts/atom.html
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<feed xmlns="http://www.w3.org/2005/Atom">
+<feed xmlns="https://www.w3.org/2005/Atom">
   <title>Attila Oláh</title>
   <link href="https://attilaolah.eu/"/>
   <link type="application/atom+xml" rel="self" href="https://attilaolah.eu/atom.xml"/>
