--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,7 +5,7 @@ title: Attila Oláh
 <ul class="wrap home">
   {% for page in paginator.posts %}
   <li{% if page.mathjax %} class="mathjax"{% endif %}>
-    <article class="wrap"{% if page.lang %} lang="{{ page.lang }}"{% endif %} itemscope itemtype="http://schema.org/BlogPosting">
+    <article class="wrap"{% if page.lang %} lang="{{ page.lang }}"{% endif %} itemscope itemtype="https://schema.org/BlogPosting">
       {% if page.layout == "post" %}
         {% include post.html %}
       {% else if page.layout == "video" %}
