--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,7 +2,7 @@
 <html lang="en-gb" itemscope itemtype="https://schema.org/Blog" prefix="og: https://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
-  <title>{{ page.title }}</title>
+  <title>{{ page.title | default: "ATL's Blog" }}</title>
   <link rel="stylesheet" href="/dst/main.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,400italic,700italic|Roboto+Condensed:300,400&subset=latin,latin-ext">
   <link rel="icon" type="image/jpeg" href="/avatar/192.jpg">
