--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,5 +1,5 @@
 {% capture year %}{{ page.date | date: "%Y" | divide_by: 2 }}{% endcapture %}
-<li class="year-{{ year }}" data-year="{{ year }}"{% if page.tags %} data-tags="{% for tag in page.tags %}{{ tag | downcase }}{% unless forloop.last %} {% endunless %}{% endfor %}"{% endif %}>
+<li class="year-{{ year }}" data-year="{{ year }}"{% if page.tags %} data-tags="{{ page.tags | join: " " }}"{% endif %}>
   <time class="condensed thin" datetime="{{ page.date | date: "%Y-%m-%dT00:00:00Z" }}">{{ page.date | date: "%d %B" }}</time>
   <h2 class="condensed">
     <a href="{{ page.url }}">{{ page.title }}</a>
