--- a/src/less/archive.less
+++ b/src/less/archive.less
@@ -32,7 +32,7 @@
     a {
       color: #333;
       position: relative;
-      &:before {
+      &::before {
         content: " ";
         background: #fff;
         border: 1px solid #999;
@@ -46,7 +46,7 @@
       &:hover,
       &:focus,
       &:active {
-        &:before {
+        &::before {
           background: #999;
           width: 3px; height: 3px;
           border: 2px solid #333;
@@ -60,7 +60,7 @@
   .year-2011 + :not(.year-2011) {
     margin-top: 8px;
     border-top: 1px dashed #999;
-    &:before {
+    &::before {
       color: #999;
       font-size: 24px;
       line-height: 22px;
@@ -80,13 +80,13 @@
       padding-top: 16px;
     }
   }
-  &:before,
-  &:after {
+  &::before,
+  &::after {
     content: " ";
     position: absolute;
     left: @leftcol + 5px;
   }
-  &:before {
+  &::before {
     top: 32px;
     width: 6px;
     height: 6px;
@@ -94,7 +94,7 @@
     border-left: 1px solid #999;
     .rotate(45deg);
   }
-  &:after {
+  &::after {
     width: 5px;
     height: 5px;
     bottom: 0;
