--- a/src/less/archive.less
+++ b/src/less/archive.less
@@ -62,6 +62,7 @@
     border-top: 1px dashed #999;
     &::before {
       color: #999;
+      background: white;
       font-size: 24px;
       line-height: 22px;
       position: absolute;
