--- a/src/less/post.less
+++ b/src/less/post.less
@@ -52,6 +52,9 @@ article {
   blockquote {
     margin: 0;
     padding-left: 2rem;
+    code {
+      font-size: 1rem;
+    }
   }
   .author,
   blockquote {
