Update cover image.

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -6,7 +6,7 @@ body > header {
   position: relative;
   .cover {
     box-shadow: inset black 0 -32rem 24rem -24rem;
-    background: url(/images/w/cover.jpg) 50% 85% no-repeat;
+    background: url(/images/w/cover.jpg) center center no-repeat;
     background-size: cover;
     box-sizing: border-box;
     height: 24rem;
@@ -71,7 +71,7 @@ body > header {
 @media screen and (max-width: 520px) {
   body > header {
     .content {
-      margin: 3rem 0 0;
+      margin: 4rem 0 0;
       text-align: center;
     }
     .avatar {
