--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -58,9 +58,9 @@
     {{ content }}
   </div>
   <footer>
-    <a href="https://plus.google.com/112887311846435666179?rel=author" rel="publisher">Attila Oláh</a>
-    <span class="wide">||</span><br class="narrow">
-    <a href="mailto:attilaolah@gmail.com" rel="me">attilaolah@gmail.com</a>
+    <span>Attila Oláh</span>
+    <span class="wide">//</span><br class="narrow">
+    <a href="mailto:atl@google.com" rel="me">atl@google.com</a>
   </footer>
 </body>
 </html>
