--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -48,7 +48,7 @@
       <div class="content" itemprop="author" itemscope itemtype="https://data-vocabulary.org/Person">
         <div class="avatar"></div>
         <h2><a href="{{ site.url }}" itemprop="url"><span itemprop="name"><strong itemprop="givenName">Attila</strong> <span itemprop="familyName">Ol&aacute;h</span></span></a></h2>
-        <h3 class="condensed thin"><strong>SRE</strong> @ <a href="//careers.google.com/locations/zurich">Google Zürich</a></h3>
+        <h3 class="condensed thin">Tech Infra / <strong>Site Reliability Engineer</strong></h3>
         <link itemprop="nationality" href="https://en.wikipedia.org/wiki/Serbia">
         <link itemprop="nationality" href="https://en.wikipedia.org/wiki/Hungary">
       </div>
