Update email address.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -60,7 +60,7 @@
   <footer>
     <span>Attila Oláh</span>
     <span class="wide">//</span><br class="narrow">
-    <a href="mailto:atl@google.com" rel="me">atl@google.com</a>
+    <a href="mailto:attilaolah@gmail.com" rel="me">attilaolah@gmail.com</a>
   </footer>
 </body>
 </html>
