--- a/_layouts/rss.html
+++ b/_layouts/rss.html
@@ -13,7 +13,7 @@
       <title>{{ post.title }}</title>
       <link>https://attilaolah.eu{{ post.url }}</link>
       <pubDate>{{ post.date | date: "%a, %d %b %Y %H:%M:%S %z" }}</pubDate>
-      <author>atl@google.com (Attila Oláh)</author>
+      <author>attilaolah@gmail.com (Attila Oláh)</author>
       <guid>https://attilaolah.eu{{ post.id }}</guid>
       <description>{{ post.content | xml_escape }}</description>
     </item>
