--- a/_layouts/atom.html
+++ b/_layouts/atom.html
@@ -7,7 +7,7 @@
   <id>https://attilaolah.eu/</id>
   <author>
     <name>Attila Oláh</name>
-    <email>atl@google.com</email>
+    <email>attilaolah@gmail.com</email>
   </author>
   {% for post in site.posts %}
   <entry>
