--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>{{ page.title | default: "ATL's Blog" }}</title>
 
-<link rel="stylesheet" href="/dst/main.min.css">
+<link rel="stylesheet" href="/assets/css/main.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,400italic,700italic|Roboto+Condensed:300,400&subset=latin,latin-ext">
 <link rel="icon" type="image/jpeg" href="/avatar/192.jpg">
 <link rel="alternate" type="application/rss+xml" title="RSS feed" href="/rss.xml">
@@ -42,8 +42,6 @@
 <meta property="og:description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | truncatewords: 30 | xml_escape }}">
 {%- endif %}
 
-<script src="/dst/main.min.js" async></script>
-
 <header>
   <div class="cover"></div>
   <div class="wrap">
@@ -64,3 +62,5 @@
   <span class="wide">//</span><br class="narrow">
   <a href="mailto:attilaolah@gmail.com" rel="me">attilaolah@gmail.com</a>
 </footer>
+
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
