Remove tags and mathjax flag.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,7 @@
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://attilaolah.eu{{ page.url }}">
   {%- if page.lang %}
-<meta property="og:locale" content="{{ page.lang_full }}">
+<meta property="og:locale" content="{{ page.locale }}">
   {%- else %}
 <meta property="og:locale" content="en_GB">
   {%- endif %}
