--- a/_includes/postheader.html
+++ b/_includes/postheader.html
@@ -1,6 +1,4 @@
 <header>
-  <time class="condensed thin" datetime="{{ page.date | date: "%Y-%m-%dT00:00:00Z" }}">{{ page.date | date: "%d %b %Y" }}</time>
-  <h1 class="condensed">
-    <a href="{{ page.url }}">{{ page.title }}</a>
-  </h1>
+  <h1 class="condensed">{{ page.title -}}
+  <time class="condensed thin" datetime="{{ page.date | date: "%Y-%m-%dT00:00:00Z" }}">{{ page.date | date: "%d %b %Y" }}</time></h1>
 </header>
