--- a/_sass/_markdown.sass
+++ b/_sass/_markdown.sass
@@ -13,16 +13,19 @@
     overflow-x: auto
   code
     white-space: nowrap
-    padding: .125rem .25rem 0
+    padding: 0 0.25rem
   pre, code
-    background: #eee
-    font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif
+    background: #ddd
+    font-family: Consolas, monospace
   pre,
   pre > code
-    background: #eee
+    background: #ddd
     white-space: pre
   pre > code
     padding: 0
+
+  figure
+    margin: 0
 
   // Syntax highlighting.
   // Generated using 'pygmentize -S colorful -f html'.
