--- a/_sass/_post.sass
+++ b/_sass/_post.sass
@@ -1,22 +1,5 @@
 article
   color: #404040
-  position: relative
-  padding: 1rem 1rem 1rem 2rem
-  min-height: 10rem
-  h1
-    color: #333
-    font-size: 2.5rem
-    margin: 1rem 0 .5rem
-    border-bottom: thin solid #ccc
-    a[rel=source]
-      color: #ccc
-      &:before
-        content: "#"
-
-      &:hover,
-      &:focus,
-      &:active
-        color: inherit
 
   ul
     margin: 1rem 0
@@ -25,9 +8,9 @@ article
     max-width: 100%
     display: block
     margin: 0 auto
-    border: .75rem solid #fff
-    box-shadow: 0 .125rem .25rem #ccc
     box-sizing: border-box
+    border: thin solid #ccc
+    padding: .5rem
 
   img.icon-24
     height: 24px
@@ -81,68 +64,9 @@ article
     &:last-child
       margin-bottom: 1em
 
-  footer
-    color: #999
-    text-transform: lowercase
-    border-top: thin solid #ccc
-    ul, li
-      display: inline
-      margin: 0
-      padding: 0
-
-    li:before
-      content: "#"
-
-    a
-      line-height: 24px
-
-    a[rel=source]
-      float: right
-
-  &.post
-    footer
-      margin-bottom: 1rem
-
 time
-  color: #999
-  font-size: 1.5rem
-  line-height: 1rem
+  color: #666
+  font-size: 50%
   text-transform: uppercase
   white-space: nowrap
-
-@media only screen and (max-width: 520px)
-  article
-    padding: 1rem .5rem .5rem
-    h1
-      text-align: center
-      word-wrap: break-word
-
-@media only screen and (max-width: 520px)
-  article time
-    display: block
-    text-align: center
-    margin: 1rem 0 -.75rem
-    &:before,
-    &:after
-      content: "\2014"
-      padding: .5rem
-
-@media only screen and (min-width: 521px)
-  article time
-    text-align: right
-    position: absolute
-    left: -14.5rem
-    width: 16rem
-    transition: all 0.25s ease-in-out 0
-    transform-origin: bottom right
-
-@media only screen and (min-width: 521px) and (max-width: 1120px)
-  article time
-    top: 1.5rem
-    transform: rotate3d(0, 0, 1, -90deg)
-
-@media only screen and (min-width: 1121px)
-  article time
-    top: 3.375rem
-    transform: rotate3d(0, 0, 1, 0deg)
-
+  vertical-align: super
