Enable swap font loading.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,7 @@
 <title>{{ page.title | default: "ATL's Blog" }}</title>
 
 <link rel="stylesheet" href="/assets/css/main.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,400italic,700italic|Roboto+Condensed:300,400&subset=latin,latin-ext">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,400italic,700italic|Roboto+Condensed:300,400&subset=latin,latin-ext&display=swap">
 <link rel="icon" type="image/jpeg" href="/avatar/192.jpg">
 <link rel="alternate" type="application/rss+xml" title="RSS feed" href="/rss.xml">
 <link rel="alternate" type="application/atom+xml" title="Atom feed" href="/atom.xml">
