--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>{{ page.title | default: "ATL's Blog" }}</title>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="stylesheet" href="/assets/css/main.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,400italic,700italic|Roboto+Condensed:300,400&subset=latin,latin-ext&display=swap">
 <link rel="icon" type="image/jpeg" href="/avatar/192.jpg">
