--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -60,4 +60,6 @@
   {{ content }}
 </div>
 
+{% if page.mathjax -%}
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+{%- endif %}
