--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,5 +2,5 @@
 layout: base
 ---
 <article class="wrap post{% if page.mathjax %} mathjax{% endif %}"{% if page.lang %} lang="{{ page.lang }}"{% endif %}>
-  {% include post.html %}
+  {%- include post.html -%}
 </article>
