--- a/_includes/postbody.html
+++ b/_includes/postbody.html
@@ -1,7 +1,7 @@
 <div class="markdown" itemprop="articleBody">
-  {% if content != "" %}
-    {{ content }}
-  {% else %}
-    {{ page.content }}
-  {% endif %}
+{% if content != "" %}
+  {{- content }}
+{% else %}
+  {{- page.content }}
+{% endif %}
 </div>
